--- a/index.html
+++ b/index.html
@@ -385,16 +385,16 @@
                     <input type="text" id="customerName" required>
                 </div>
                 <div class="form-group">
+                    <label>Line 匿名稱號 (若無則填寫「無」，僅方便聯絡用)</label>
+                    <input type="text" id="lineNickname" placeholder="請輸入Line稱號或填寫「無」">
+                </div>
+                <div class="form-group">
                     <label>電話 *</label>
                     <input type="tel" id="customerPhone" required>
                 </div>
                 <div class="form-group">
                     <label>Email *</label>
                     <input type="email" id="customerEmail" value="@gmail.com" required>
-                </div>
-                <div class="form-group">
-                    <label>Line 匿名稱號 (若無則填寫「無」，僅方便聯絡用)</label>
-                    <input type="text" id="lineNickname" placeholder="請輸入Line稱號或填寫「無」">
                 </div>
 
                 <div class="form-group">
@@ -578,9 +578,9 @@
             if (cart.length === 0) {
                 cartItemsDiv.innerHTML = '<p style="text-align: center; color: #999;">購物車是空的</p>';
                 document.getElementById('subtotalPrice').textContent = '0';
-                document.getElementById('shippingFee').textContent = '55';
+                document.getElementById('shippingFee').textContent = '40';
                 document.getElementById('shippingNote').textContent = '';
-                document.getElementById('totalPrice').textContent = '55';
+                document.getElementById('totalPrice').textContent = '40';
                 return;
             }
 
@@ -596,7 +596,7 @@
             `).join('');
 
             const subtotal = cart.reduce((sum, item) => sum + (item.price * item.quantity), 0);
-            const shippingFee = subtotal >= 600 ? 0 : 55;
+            const shippingFee = subtotal >= 600 ? 0 : 40;
             const total = subtotal + shippingFee;
 
             document.getElementById('subtotalPrice').textContent = subtotal;
@@ -641,9 +641,12 @@
             }
 
             const subtotal = cart.reduce((sum, item) => sum + (item.price * item.quantity), 0);
-            const shippingFee = subtotal >= 600 ? 0 : 55;
+            const shippingFee = subtotal >= 600 ? 0 : 40;
             const total = subtotal + shippingFee;
             const orderTime = new Date().toLocaleString('zh-TW');
+
+            // 合併姓名和匿名稱號
+            const nameWithNickname = `${name}(${lineNickname})`;
 
             // 將截圖轉換為 base64
             const screenshotBase64 = await new Promise((resolve, reject) => {
@@ -655,7 +658,7 @@
 
             const orderData = {
                 orderTime,
-                customer: { name, phone, email, lineNickname, address, account },
+                customer: { name: nameWithNickname, phone, email, address, account },
                 items: cart,
                 subtotal,
                 shippingFee,
